--- a/app/src/main/res/layout/activity_carry_list.xml
+++ b/app/src/main/res/layout/activity_carry_list.xml
@@ -3,7 +3,8 @@
     android:id="@+id/itemlistview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/background_3">
 
     <TextView
         android:layout_width="match_parent"
@@ -16,7 +17,15 @@
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/heading"
         android:layout_margin="10dp"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:text="持っていくものはこちら"
         />
 
     <ListView
