--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -25,7 +25,8 @@
             android:id="@+id/idTVActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
