--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,34 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:background="@drawable/background">
 
     <Button
         android:id="@+id/start"
-        android:layout_width="194dp"
+        android:layout_width="166dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="120dp"
-        android:layout_marginEnd="113dp"
-        android:layout_marginBottom="309dp"
-        android:text="Let's get started" />
+        android:layout_marginStart="127dp"
+        android:layout_marginEnd="134dp"
+        android:layout_marginBottom="308dp"
+        android:text="そうしたら行こう" />
 
     <TextView
         android:id="@+id/textviewhomescreen"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
+        android:layout_width="286dp"
+        android:layout_height="189dp"
         android:layout_above="@+id/start"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="220dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginBottom="68dp"
-        android:text="Welcome! Planning for a trip?"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="146dp"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="28dp"
+        android:text="ようこそ！旅行にいく予定がある？"
         android:textAlignment="center"
+        android:textAppearance="@color/white"
         android:textSize="20dp" />
 
 
