--- a/app/src/main/res/layout/child.xml
+++ b/app/src/main/res/layout/child.xml
@@ -13,6 +13,7 @@
         android:textAlignment="viewStart"
         android:textSize="15dp"
         android:layout_margin="10dp"
+        android:textColor="@color/black"
         />
 
 </RelativeLayout>
